namespace WorkCloneCS;

public partial class TableForm
{
    private void clickSection()
    {
        // For buttons 1-87
        for (int i = 1; i <= 87; i++)
        {
            var button = (Button)this.Controls.Find($"button{i}", true)[0];
            button.Click += tableBtn_Click;
            button.DoubleClick += tableBtn_DoubleClick;
        }

        for (int i = 90; i <= 98; i++)
        {
            var button = (Button)this.Controls.Find($"button{i}", true)[0];
            button.Click += tableBtn_Click;
            button.DoubleClick += tableBtn_DoubleClick;
        }
        button300.Click += tableBtn_Click;
        button500.Click += tableBtn_Click;
        button700.Click += tableBtn_Click;
        button800.Click += tableBtn_Click;
        button300.DoubleClick += tableBtn_DoubleClick;
        button500.DoubleClick += tableBtn_DoubleClick;
        button700.DoubleClick += tableBtn_DoubleClick;
        button800.DoubleClick += tableBtn_DoubleClick;
    }
}